// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Footer component tests matches snapshot when closed 1`] = `
<div>
  <div
    class="footer-background closed"
  >
    <div
      class="footer-content"
    >
      <span
        class="item"
        id="profile-button"
        role="button"
        tabindex="0"
        title="Profile"
      >
        <svg
          class="icon"
          fill="#fff"
        >
          <use
            xlink:href="/svglist.svg#profile"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
      </span>
      <span
        class="item"
        id="search-button"
        role="button"
        tabindex="0"
        title="Search"
      >
        <svg
          class="icon"
          fill="#fff"
        >
          <use
            xlink:href="/svglist.svg#search"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
      </span>
      <span
        class="item"
        id="notebook-button"
        role="button"
        tabindex="0"
        title="Notebook"
      >
        <svg
          class="icon"
          fill="#fff"
        >
          <use
            xlink:href="/svglist.svg#notebook"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
      </span>
      <span
        class="item"
        id="settings-button"
        role="button"
        tabindex="0"
        title="Settings"
      >
        <svg
          class="icon"
          fill="#fff"
        >
          <use
            xlink:href="/svglist.svg#text_options"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Footer component tests matches snapshot when open 1`] = `
<div>
  <div
    class="footer-background"
  >
    <div
      class="footer-content"
    >
      <span
        class="item"
        id="profile-button"
        role="button"
        tabindex="0"
        title="Profile"
      >
        <svg
          class="icon"
          fill="#fff"
        >
          <use
            xlink:href="/svglist.svg#profile"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
      </span>
      <span
        class="item"
        id="search-button"
        role="button"
        tabindex="0"
        title="Search"
      >
        <svg
          class="icon"
          fill="#fff"
        >
          <use
            xlink:href="/svglist.svg#search"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
      </span>
      <span
        class="item"
        id="notebook-button"
        role="button"
        tabindex="0"
        title="Notebook"
      >
        <svg
          class="icon"
          fill="#fff"
        >
          <use
            xlink:href="/svglist.svg#notebook"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
      </span>
      <span
        class="item"
        id="settings-button"
        role="button"
        tabindex="0"
        title="Settings"
      >
        <svg
          class="icon"
          fill="#fff"
        >
          <use
            xlink:href="/svglist.svg#text_options"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;
